# StudyRAG

./: .gitignore  Makefile  README.md  STUDYRAG_PROJECT.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-frontend.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/routes/: ingest.py  query.py  system.py
backend/app/core/: auth.py  config.py
backend/app/db/: supabase.py
backend/app/schemas/: document.py  system.py
backend/app/services/: chunker.py  llm_service.py  pdf_parser.py  private_storage.py
backend/tests/: conftest.py  test_auth.py  test_auth_migration.py  test_ingest.py  test_query.py  test_retrieval.py  test_system.py
data/evaluations/: questions.jsonl
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: architecture.md  deployment-auth.md  deployment-aws.md
docs/superpowers/plans/: 2026-07-13-aurora-dashboard.md  2026-07-13-private-study-app-clean-ui.md  2026-07-13-supabase-auth-private-library.md
docs/superpowers/specs/: 2026-07-13-aurora-dashboard-design.md  2026-07-13-clean-study-canvas-ui-design.md  2026-07-13-supabase-auth-private-library-design.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/app/: App.tsx  (+1 more)
frontend/tests/: App.test.tsx  AppShell.test.tsx  AuthGate.test.tsx  AuthScreen.test.tsx  ChatPanel.test.tsx  LibraryPage.test.tsx
scripts/: dev.sh  evaluate_retrieval.py  seed_demo.py
supabase/migrations/: 20260713_auth_private_library.sql
(+22 files in other folders)
