[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "studyrag-backend"
version = "2.0.0"
description = "StudyRAG V2 Backend API — Trợ lý ôn thi từ tài liệu cá nhân"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "StudyRAG Team"}
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlmodel>=0.0.16",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0"
]
ai = [
    "pymupdf>=1.24.0",
    "chromadb>=0.4.24",
    "sentence-transformers>=2.6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
